--- a/src/src/components/scene2d/index.css
+++ b/src/src/components/scene2d/index.css
@@ -13,3 +13,8 @@ ul.scene2d>li {
   opacity: 1;
   transition: left 1s, top 1s, opacity 1s cubic-bezier(0, 1, 0, 1);
 }
+
+ul.scene2d>li>* {
+  width: 100%;
+  height: 100%;
+}
