--- a/src/src/components/scene2d/index.css
+++ b/src/src/components/scene2d/index.css
@@ -11,7 +11,15 @@ ul.scene2d>li {
   width: 100%;
   height: 100%;
   opacity: 1;
-  transition: left 1s, top 1s, opacity 1s cubic-bezier(0, 1, 0, 1);
+  transition: left 1s;
+}
+
+ul.scene2d>li.left {
+  left: -100%;
+}
+
+ul.scene2d>li.right {
+  left: 100%;
 }
 
 ul.scene2d>li>* {
