--- a/src/src/index.css
+++ b/src/src/index.css
@@ -5,8 +5,18 @@
   box-sizing: border-box;
 }
 
-.box {
+/* box */
+
+.mid.box, .top.box, .bottom.box {
   text-align: center;
+}
+
+.left.top.box, .left.bottom.box {
+  text-align: left;
+}
+
+.right.top.box, .right.bottom.box {
+  text-align: right;
 }
 
 .box>*, .box:after {
@@ -15,6 +25,10 @@
 
 .mid.box>*, .mid.box:after {
   vertical-align: middle;
+}
+
+.top.box>*, .top.box:after {
+  vertical-align: top;
 }
 
 .bottom.box>*, .bottom.box:after {
