--- a/src/src/components/scene2d/index.css
+++ b/src/src/components/scene2d/index.css
@@ -14,6 +14,8 @@ ul.scene2d>li {
   opacity: 1;
   transition: left 1s;
   overflow: auto;
+  padding-top: 80px;
+  padding-bottom: 200px;
 }
 
 ul.scene2d>li.left {
@@ -22,4 +24,10 @@ ul.scene2d>li.left {
 
 ul.scene2d>li.right {
   left: 100%;
+}
+
+@media (min-width: 768px) {
+  ul.scene2d>li {
+    padding-bottom: 80px;
+  }
 }
