--- a/src/src/components/profile/index.css
+++ b/src/src/components/profile/index.css
@@ -16,9 +16,17 @@ h1.first-title {
   text-shadow: 1px 1px 1px #666;
 }
 
+.class-record-wrapper {
+  max-height: 72vh;
+}
+
 .class-record-wrapper::-webkit-scrollbar {
-  width: 16px;
-  height: 16px;
+  width: 5px;
+  height: 5px;
+  background-color: #d1d1d1;
+}
+
+.class-record-wrapper::-webkit-scrollbar-corner {
   background-color: #d1d1d1;
 }
 
@@ -27,8 +35,8 @@ h1.first-title {
 }
 
 .class-record-wrapper::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 10px 2px rgba(76, 0, 255, 0.733);
-  background-color: #333;
+  box-shadow: inset 0 0 1px 1px #ff0;
+  background-color: #000;
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
 }
 
