--- a/src/src/components/demonstrations/index.css
+++ b/src/src/components/demonstrations/index.css
@@ -1,3 +1,20 @@
+.demonstration {
+  position: fixed;
+  z-index: 999999;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.demonstration-text {
+  background-color: darkblue;
+  color: whitesmoke;
+  text-shadow: 0 0 5px white;
+  padding: 0.5em;
+  border-radius: 0.255rem;
+}
+
 @keyframes moving_right_to_left {
   from {
     opacity: 0;
