--- a/src/src/components/demonstrations/index.css
+++ b/src/src/components/demonstrations/index.css
@@ -34,6 +34,15 @@
   }
 }
 
+@keyframes bling {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .hand-img {
   position: relative;
   top: -100px;
@@ -54,6 +63,6 @@
 
 @media (min-width: 768px) {
   .hand-img {
-    animation: none;
+    animation: 1s linear 0s infinite alternate both running bling;
   }
 }
