--- a/src/src/components/techtree/index.css
+++ b/src/src/components/techtree/index.css
@@ -1,5 +1,6 @@
 .tech-tree-wrapper {
   height: 100%;
+  position: relative;
 }
 
 .tech-tree {
@@ -20,17 +21,17 @@
 
 .tech-tree:nth-child(2) {
   transform-origin: 100% 0 0;
-  background-color: seagreen;
+  background-color: seashell;
 }
 
 .tech-tree:nth-child(3) {
   transform-origin: 0 100% 0;
-  background-color: blueviolet;
+  background-color: lavenderblush;
 }
 
 .tech-tree:nth-child(4) {
   transform-origin: 100% 100% 0;
-  background-color: saddlebrown;
+  background-color: snow;
 }
 
 .tech-tree:before {
@@ -88,14 +89,14 @@
 }
 
 .tech-tree>.bg.line {
-  background-color: gray;
+  background-color: #ddd;
 }
 
 .tech-tree>.ft.line {
   transition: transform 1.618s;
   transform: scale3d(1, 1, 1);
   background-color: gold;
-  box-shadow: 0 0 1px 1px goldenrod;
+  box-shadow: 0 0 5px 0 goldenrod;
 }
 
 .tech-tree.trans>.ft.line, .tech-tree.focused>.ft.line {
@@ -132,4 +133,20 @@
 .tech-tree:nth-child(3)>.vertical.line, .tech-tree:nth-child(4)>.vertical.line {
   top: 0;
   transform-origin: 50% 100% 0;
+}
+
+.atechtree {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  opacity: 0;
+}
+
+.atechtree.show {
+  opacity: 1;
+  z-index: 2;
+  transition: opacity 2s cubic-bezier(1, 0, .81, 0);
 }
