--- a/src/src/components/pager/index.css
+++ b/src/src/components/pager/index.css
@@ -7,18 +7,21 @@
   left: 0;
 }
 
-.next, .play-pause {
+.next {
   position: fixed;
   z-index: 999999;
-  bottom: 0;
-  width: 80px;
-  height: 80px;
-}
-
-.next {
-  right: 0;
+  top: -200px;
+  left: -20px;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
 }
 
 .play-pause {
+  position: fixed;
+  z-index: 999999;
+  bottom: 0;
   left: 0;
+  width: 80px;
+  height: 80px;
 }
